# gadummy

./: .env  .flake8  Makefile  README.md  pyproject.toml  tests.py
.github/workflows/: ci.yml  test_and_coverage.yml
gadummy/TestP1/: test_p1.py
gadummy/test_p1/: test_p1.py
src/TestP1/: test_p1.py
tests/: .coverage  coverage.xml  test_p1_test.py  tests.json
